# ChangeLog for net-www/ochusha
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/ochusha/Attic/ChangeLog,v 1.23 2004/02/29 16:39:53 usata Exp $

*ochusha-0.5 (01 Mar 2004)

  01 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.8.2.ebuild,
  ochusha-0.4.9.6.ebuild, ochusha-0.5.ebuild:
  Version bumepd. Cleaned old versions.

  22 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.10.1.ebuild,
  ochusha-0.4.10.3.ebuild, ochusha-0.4.9.6.ebuild:
  Marked as stable

*ochusha-0.4.10.3 (29 Jan 2004)

  29 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.10.3.ebuild,
  ochusha-0.4.10.ebuild, ochusha-0.4.7.1.ebuild, ochusha-0.4.8.2.ebuild,
  ochusha-0.4.9.4.ebuild:
  Version bumped

*ochusha-0.4.10.1 (23 Jan 2004)

  23 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.10.1.ebuild:
  Version bumped

*ochusha-0.4.10 (22 Jan 2004)

  22 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.10.ebuild:
  Version bumped

*ochusha-0.4.9.4 (17 Jan 2004)

  17 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.8.1.ebuild,
  ochusha-0.4.9.1.ebuild, ochusha-0.4.9.3.ebuild, ochusha-0.4.9.4.ebuild,
  ochusha-0.4.9.6.ebuild, ochusha-0.4.9.ebuild:
  Version bumped. Cleaned out old versions.

*ochusha-0.4.9.3 (14 Jan 2004)

  14 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.9.3.ebuild:
  Version bumped. Bug fix only

*ochusha-0.4.9.1 (13 Jan 2004)

  13 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.9.1.ebuild:
  Version bumped

*ochusha-0.4.9 (11 Jan 2004)

  11 Jan 2004; <usata@gentoo.org> ochusha-0.4.7.1.ebuild, ochusha-0.4.9.ebuild:
  Version bumped. Marked 0.4.7.1 (depends on oniguruma-1.9.5) as stable.

*ochusha-0.4.8.2 (06 Jan 2004)

  06 Jan 2004; <usata@gentoo.org> ochusha-0.4.8.2.ebuild:
  Version bumped

*ochusha-0.4.8.1 (05 Jan 2004)

  05 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> ochusha-0.4.6.ebuild,
  ochusha-0.4.7.ebuild, ochusha-0.4.8.1.ebuild: