@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/ochusha/Attic/ochusha-0.4.10.1.ebuild,v 1.3 2004/03/11 20:16:15 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/ochusha/Attic/ochusha-0.4.10.1.ebuild,v 1.4 2004/04/07 03:47:15 usata Exp $
 
 IUSE=""
 
@@ -23,6 +23,10 @@ DEPEND="virtual/xft
 S=${WORKDIR}/${P}
 
 src_compile() {
+
+	if has_version '>=x11-libs/gtk+-2.4' ; then
+		perl -i -pe "s/-D.*?DISABLE_DEPRECATED//g" gtk2/Makefile* || die
+	fi
 
 	econf --enable-regex --with-included-oniguruma || die
 	emake || die
